--- a/settings.gradle
+++ b/settings.gradle
@@ -38,5 +38,5 @@ dependencyResolutionManagement {
         }
     }
 }
-rootProject.name = "BeetoPOC"
+rootProject.name = "BeatoPOC"
 include ':app'
