--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.beetopoc'
+    namespace 'com.example.beatopoc'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.beetopoc"
+        applicationId "com.example.beatopoc"
         minSdk 21
         targetSdk 33
         versionCode 1
@@ -45,7 +45,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
-    implementation 'in.sunfox.healthcare.commons.java:ecg-processor:2.0.11'
+    implementation 'in.sunfox.healthcare.commons.java.ecg-processor:conclusions:2.0.12'
 
-    implementation 'in.sunfox.healthcare.commons.android.spandan-sdk:spandan-sdk:1.0.0-beta18'
+    implementation 'in.sunfox.healthcare.commons.android.spandan-sdk:spandan-sdk:1.0.0-beta22'
+
 }
