implement spandan sdk version 24

--- a/settings.gradle
+++ b/settings.gradle
@@ -18,15 +18,15 @@ dependencyResolutionManagement {
         maven {
             url = uri("https://maven.pkg.github.com/sunfox-technologies/ecg_processor")
             credentials {
-                username = properties.getProperty("repo_username", "")
-                password = properties.getProperty("repo_token", "")
+                username = properties.getProperty("repo.username", "")
+                password = properties.getProperty("repo.token", "")
             }
         }
         maven {
             url = uri("https://maven.pkg.github.com/sunfox-technologies/spandan_ecg_android_sdk")
             credentials {
-                username = properties.getProperty("repo_username", "")
-                password = properties.getProperty("repo_token", "")
+                username = properties.getProperty("repo.username", "")
+                password = properties.getProperty("repo.token", "")
             }
         }
     }
