--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     implementation 'in.sunfox.healthcare.commons.java.ecg-processor:conclusions:2.0.12'
 
-    implementation 'in.sunfox.healthcare.commons.android.spandan-sdk:spandan-sdk:1.0.0-beta22'
+    implementation 'in.sunfox.healthcare.commons.android.spandan-sdk:spandan-sdk:1.0.0-beta24'
+
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.6'
 
 }
